fetch messages by infinite scroll, two directions